--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/eggheadio/learnreduxwithdanabramov.com#readme",
   "dependencies": {
+    "@mdx-js/mdx": "^0.9.0",
+    "@zeit/next-mdx": "^1.1.0",
     "next": "^6.0.3",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
