--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "index.js",
   "now": {
+    "env": {
+      "GOOGLE_ANALYTICS": "UA-36512724-5"
+    },
     "alias": "learnreduxwithdanabramov.com"
   },
   "scripts": {
@@ -24,8 +27,14 @@
   "dependencies": {
     "@mdx-js/mdx": "^0.9.0",
     "@zeit/next-mdx": "^1.1.0",
+    "babel-plugin-emotion": "^9.1.2",
+    "dotenv": "^5.0.1",
+    "emotion": "^9.1.3",
+    "emotion-server": "^9.1.3",
     "next": "^6.0.3",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "react-emotion": "^9.1.3",
+    "react-ga": "^2.5.3"
   }
 }
