--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "url": "https://github.com/eggheadio/learnreduxwithdanabramov.com/issues"
   },
   "homepage": "https://github.com/eggheadio/learnreduxwithdanabramov.com#readme",
-  "dependencies": {
-    "@mdx-js/mdx": "^0.9.0",
-    "@zeit/next-mdx": "^1.1.0",
+  "devDependencies": {
     "babel-plugin-emotion": "^9.1.2",
+    "@mdx-js/loader": "^0.9.0",
+    "@mdx-js/mdx": "^0.9.0"
+  },
+  "dependencies": {
     "dotenv": "^5.0.1",
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
@@ -35,6 +37,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-emotion": "^9.1.3",
-    "react-ga": "^2.5.3"
+    "react-ga": "^2.5.3",
+    "remark-highlight.js": "^5.0.0"
   }
 }
