--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@mdx-js/mdx": "^0.9.0"
   },
   "dependencies": {
+    "chicago-capitalize": "^0.1.0",
     "dotenv": "^5.0.1",
     "emotion": "^9.1.3",
     "emotion-server": "^9.1.3",
