--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
     "emotion-server": "^9.1.3",
     "next": "^6.0.3",
     "react": "^16.4.0",
+    "react-click-outside": "github:tj/react-click-outside",
     "react-dom": "^16.4.0",
     "react-emotion": "^9.1.3",
     "react-ga": "^2.5.3",
+    "react-scrollspy": "^3.3.5",
     "remark-highlight.js": "^5.0.0"
   }
 }
